--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\timad\\OneDrive - Royal Holloway University of London\\FYP\\Code\\your-fashion\\index.html"
+            "file": "c:\\Users\\timad\\OneDrive - Royal Holloway University of London\\FYP\\Code\\Tim-Adams-2018-ZFAC125-100900214-FINAL-YEAR-PROJECT\\index.html"
         }
     ]
 }
