--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "hbs": "^4.2.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "type": "module",
+    "content-type": "1.0.5"
   }
 }
